[project]
name = "crewai_flow_suspend_resume_demo"
version = "0.1.0"
description = "crewai-flow-suspend-resume-demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
]

[project.scripts]
kickoff = "crewai_flow_suspend_resume_demo.main:kickoff"
run_crew = "crewai_flow_suspend_resume_demo.main:kickoff"
plot = "crewai_flow_suspend_resume_demo.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
